--- a/garden/templates/index.html
+++ b/garden/templates/index.html
@@ -4,7 +4,8 @@
     <a href="/logout">logout</a>
   </div>
   <div class="mt-4 text-center">
-    <h1>Wellcome to Icyow's Garden</h1>
+    <h1>Wellcome to Garden</h1>
+    {{ sk }}
   </div>
-  {{ sk }}
+
 {% endblock%}
